--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         </div>
         <div class="input2">
         <button id="imacros-btn">iMacros</button>
-            <label for="textarea4">iMacros Result</label>
             <textarea id="textarea4"></textarea>
+			<button id="splitButton">DOWNLOAD</button>
+			<a id="download-link" download="generated_script.iim" style="display: none;">Download iMacros Script</a>
+
 			<h1 style="text-align:center">by Hamza El Makhloufi</h1>
         </div>
     </div>
