--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <textarea id="textarea2"></textarea>
             <label for="textarea5">Emails</label>
             <textarea id="textarea5"></textarea>
+			<label for="textarea6">filtre pmta</label>
+            <textarea id="textarea6"></textarea>
         </div>
         <div class="input2">
         <button id="imacros-btn">iMacros</button>
